Smartlists: Event smartllist with only event custom fields (and any fields of other object types) are working